# DVGrouper

./: .gitignore  README.md  config.py  pyproject.toml
src/: __init__.py
src/dv_grouper/: config.py  dv_grouper.py  schemas.py
src/dv_grouper/funcs/: utils.py
test/: logging_config.py  pytest.ini  setup_logger_2.py  test_AttributeName.py  test_DataPath.py  test_SchemaDict.py
